src/objects/Entitlements__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active_Entitlement_Value__c</fullName>
        <label>Active Entitlement Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InRenewal_Entitlement_Value__c</fullName>
        <label>InRenewal Entitlement Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Entitlement_Value__c</fullName>
        <label>Inactive Entitlement Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Entitlement_value__c</fullName>
        <label>Pending Entitlement value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Option_Product_Type__c</fullName>
        <label>Pricing Option Product Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recently_Inactive_Entitlement_Value__c</fullName>
        <label>Recently Inactive Entitlement Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Entitlements</label>
</CustomObject>